--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -159,6 +159,10 @@
 }
 
 .popup {
+    font-family: @body-font-family;
+    font-size: 15px;
+    font-style: italic;
+
     header {
         font-size: 20px;
 
@@ -168,17 +172,36 @@
         }
     }
 
+    &-lot-details {
+        margin-top: 25px;
+    }
+
     .btn-learn-more {
-        background: purple;
+        background: #9D64A0;
         border-radius: 30px;
         color: white;
         font-size: 10px;
         height: 50px;
-        margin-top: 15px;
         padding: 0;
         padding-top: 10px;
         text-align: center;
         width: 50px;
+
+        &:last-child {
+            margin-top: 15px;
+        }
+    }
+
+    .organizers-count {
+        color: #9D64A0;
+    }
+
+    .owner-type {
+        text-transform: uppercase;
+    }
+
+    .owner-type-private {
+        color: #9D64A0;
     }
 }
 
