--- a/livinglotsla/templates/livinglots/lots/map.html
+++ b/livinglotsla/templates/livinglots/lots/map.html
@@ -128,6 +128,7 @@
                                                 {{ councildistrict.label }} 
                                             </a>
                                         {% endfor %}
+                                        <div class="clearfix"></div>
                                     </div>
                                 </div>
                             </section>
