--- a/livinglotsla/static/css/bootstrap.less
+++ b/livinglotsla/static/css/bootstrap.less
@@ -22,6 +22,8 @@
 @import "../bower_components/bootstrap/less/breadcrumbs.less";
 @import "../bower_components/bootstrap/less/labels.less";
 @import "../bower_components/bootstrap/less/alerts.less";
+@import "../bower_components/bootstrap/less/modals.less";
+@import "../bower_components/bootstrap/less/close.less";
 
 // Utility classes
 @import "../bower_components/bootstrap/less/utilities.less";
