--- a/livinglotsla/static/css/pages/lot_detail.less
+++ b/livinglotsla/static/css/pages/lot_detail.less
@@ -164,3 +164,32 @@
         padding-left: 25px;
     }
 }
+
+.lot-detail-page .modal {
+    &-header {
+        border-bottom: 0;
+    }
+
+    &-content {
+        color: white;
+        background-color: black;
+        border: 0;
+        border-radius: 0;
+    }
+
+    &-title {
+        font-size: 16px;
+        font-family: @header-font-family;
+        font-weight: bold;
+        text-transform: uppercase;
+    }
+
+    .close {
+        color: white;
+        opacity: 1;
+
+        &:focus {
+            outline: none;
+        }
+    }
+}
