--- a/livinglotsla/templates/base.html
+++ b/livinglotsla/templates/base.html
@@ -72,5 +72,7 @@
 
             {% include "_footer.html" %}
         {% endblock %}
+
+        {% block extra_body %}{% endblock %}
     </body>
 </html>
