--- a/livinglotsla/templates/livinglots/organize/add_organizer.html
+++ b/livinglotsla/templates/livinglots/organize/add_organizer.html
@@ -1,25 +1,15 @@
-{% extends "base.html" %}
 {% load flatblock_tags i18n %}
 
-{% block body_class %} lot-add-page add-organizer-page {% endblock %}
+<div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+    <h1 class="modal-title">
+        {% trans "Organize this lot!" %}<br />
+        {{ content_object.display_name|title|default:"unknown" }}
+    </h1>
+</div>
 
-{% block breadcrumbs_wrapper %}
-    <ul class="breadcrumb">
-        <li>
-            <a href="/">{% trans "Home" %}</a>
-        </li>
-        <li>
-            <a href="{{ content_object.get_absolute_url }}">
-                {{ content_object.display_name|title|default:"unknown" }}
-            </a>
-        </li>
-        <li>{% trans "Organize this lot!" %}</li>
-    </ul>
-{% endblock %}
-
-{% block content %}
-    <h1>{% trans "Organize this lot!" %}</h1>
-    <h2>{{ content_object.display_name|title|default:"unknown" }}</h2>
+<div class="modal-body">
     {% flatblock "organizer-add-intro" %}
-    {% include "_form.html" with form=form %}
-{% endblock %}
+    {% url "organize:add_organizer" pk=content_object.pk as action_url %}
+    {% include "_form.html" with action=action_url form=form %}
+</div>
