--- a/livinglotsla/templates/livinglots/organize/add_organizer_success.html
+++ b/livinglotsla/templates/livinglots/organize/add_organizer_success.html
@@ -1,27 +1,19 @@
-{% extends "base.html" %}
 {% load i18n %}
 
-{% block body_class %} lot-add-page add-organizer-page {% endblock %}
+<div class="modal-header">
+    <button type="button" class="close btn-close-modal" data-dismiss="modal" aria-hidden="true">&times;</button>
+    <h1 class="modal-title">
+        {% trans "Organize this lot!" %}<br />
+        {{ content_object.display_name|title|default:"unknown" }}
+    </h1>
+</div>
 
-{% block breadcrumbs_wrapper %}
-    <ul class="breadcrumb">
-        <li>
-            <a href="/">{% trans "Home" %}</a>
-        </li>
-        <li>
-            <a href="{{ participant.content_object.get_absolute_url }}">
-                {{ participant.content_object.display_name|title|default:"unknown" }}
-            </a>
-        </li>
-        <li>{% trans "Organize this lot!" %}</li>
-    </ul>
-{% endblock %}
-
-{% block content %}
-    <div class="alert alert-success">
+<div class="modal-body">
+    <div>
         {% trans "You were added as an organizer for" %}
         {{ participant.content_object.display_name|title|default:"unknown" }}
     </div>
-    <h1>Organize this lot!</h1>
-    <p>You're now growing community at {{ participant.content_object.display_name|title|default:"unknown" }}.</p>
-{% endblock %}
+    <button class="btn btn-primary btn-close-modal" type="button">
+        {% trans "ok" %}
+    </button>
+</div>
