Form control styles

--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -4435,6 +4435,12 @@ footer .row {
   color: black;
   background: #eee;
 }
+.form-control {
+  border-radius: 0;
+  font-size: 22px;
+  height: 40px;
+  padding: 6px 6px;
+}
 .leaflet-bar a,
 .leaflet-bar a:hover {
   font-size: 30px;
