--- a/livinglotsla/static/css/overrides/bootstrap.less
+++ b/livinglotsla/static/css/overrides/bootstrap.less
@@ -21,3 +21,10 @@
         background: #eee;
     }
 }
+
+.form-control {
+    border-radius: 0;
+    font-size: 22px;
+    height: 40px;
+    padding: 6px 6px;
+}
