--- a/livinglotsla/templates/livinglots/organize/add_organizer.html
+++ b/livinglotsla/templates/livinglots/organize/add_organizer.html
@@ -11,5 +11,27 @@
 <div class="modal-body">
     {% flatblock "organizer-add-intro" %}
     {% url "organize:add_organizer" pk=content_object.pk as action_url %}
-    {% include "_form.html" with action=action_url form=form %}
+    <form class="form-horizontal" method="post" 
+        {% if multipart %}enctype="multipart/form-data"{% endif %}
+        {% if action_url %}action="{{ action_url }}"{% endif %}
+        >
+
+        {% include "forms/header.html" with form=form %}
+
+        <div class="row">
+            <div class="col-md-6">
+                {% include "forms/field.html" with field=form.name %}
+                {% include "forms/field.html" with field=form.email %}
+                {% include "forms/field.html" with field=form.phone %}
+                {% include "forms/field.html" with field=form.url %}
+                {% include "forms/field.html" with field=form.type %}
+                {% include "forms/field.html" with field=form.post_publicly %}
+            </div>
+            <div class="col-md-6">
+                {% include "forms/field.html" with field=form.notes %}
+            </div>
+        </div>
+
+        {% include "forms/footer.html" %}
+    </form>
 </div>
