--- a/livinglotsla/static/css/overrides/bootstrap.less
+++ b/livinglotsla/static/css/overrides/bootstrap.less
@@ -22,9 +22,18 @@
     }
 }
 
+.form-horizontal .form-group {
+    margin-left: 0;
+    margin-right: 0;
+}
+
 .form-control {
     border-radius: 0;
     font-size: 22px;
     height: 40px;
     padding: 6px 6px;
+}
+
+input[type="checkbox"] {
+    width: 40px;
 }
