--- a/livinglotsla/templates/forms/footer.html
+++ b/livinglotsla/templates/forms/footer.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
 <div class="form-actions">
-    <div class="col-lg-offset-3 col-lg-6">
+    <div class="pull-right">
         {% if cancel_button %}
             <button class="btn btn-default btn-cancel" type="button">
                 {% trans "cancel" %}
