--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -230,25 +230,7 @@ footer {
 form {
 
     .btn-primary {
-        &,
-        &:focus {
-            color: #A1A1A1;
-            background-color: #454545;
-            border: 0;
-        }
-        &:hover,
-        &:active {
-            background-color: #2A2A2A;
-        }
-        &.disabled,
-        &[disabled] {
-            &.active,
-            &:active,
-            &:focus,
-            &:hover {
-                background-color: #757575;
-            }
-        }
+        .button-variant(#A1A1A1; #454545; #000);
     }
 
 }
