--- a/livinglotsla/templates/inplace/lots/lot_detail.html
+++ b/livinglotsla/templates/inplace/lots/lot_detail.html
@@ -109,7 +109,7 @@
             <h2>
                 {% trans "Notes" %}
             </h2>
-            <a class="btn btn-default" href="{% url "usercontent:add_note" pk=lot.pk %}">
+            <a class="btn btn-default" href="{% url "usercontent:add_note" pk=lot.pk %}" data-target="#note-modal" data-toggle="modal">
                 {% trans "Add your note" %}
             </a>
             {% render_note_list for lot %}
@@ -342,6 +342,11 @@
 {% endblock %}
 
 {% block extra_body %}
+    <div id="note-modal" class="modal" role="dialog">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content"></div>
+        </div>
+    </div>
     <div id="organizer-modal" class="modal" role="dialog">
         <div class="modal-dialog modal-lg">
             <div class="modal-content"></div>
