--- a/livinglotsla/templates/inplace/lots/lot_detail.html
+++ b/livinglotsla/templates/inplace/lots/lot_detail.html
@@ -31,7 +31,7 @@
         <section id="photos" class="lot-detail-side-section photos">
             <h2>{% trans "Photos" %}</h2>
             <div>
-                <a class="btn btn-default" href="{% url "usercontent:add_photo" pk=lot.pk %}">
+                <a class="btn btn-default" href="{% url "usercontent:add_photo" pk=lot.pk %}" data-target="#note-modal" data-toggle="modal">
                     {% trans "Submit a photo" %}
                 </a>
             </div>
@@ -348,6 +348,11 @@
         </div>
     </div>
     <div id="organizer-modal" class="modal" role="dialog">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content"></div>
+        </div>
+    </div>
+    <div id="photo-modal" class="modal" role="dialog">
         <div class="modal-dialog modal-lg">
             <div class="modal-content"></div>
         </div>
