--- a/livinglotsla/templates/inplace/lots/lot_detail.html
+++ b/livinglotsla/templates/inplace/lots/lot_detail.html
@@ -31,7 +31,7 @@
         <section id="photos" class="lot-detail-side-section photos">
             <h2>{% trans "Photos" %}</h2>
             <div>
-                <a class="btn btn-default" href="{% url "usercontent:add_photo" pk=lot.pk %}" data-target="#note-modal" data-toggle="modal">
+                <a class="btn btn-default" href="{% url "usercontent:add_photo" pk=lot.pk %}" data-target="#photo-modal" data-toggle="modal">
                     {% trans "Submit a photo" %}
                 </a>
             </div>
