--- a/livinglotsla/templates/inplace/lots/lot_detail.html
+++ b/livinglotsla/templates/inplace/lots/lot_detail.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load files_tags flatblock_tags i18n inplace_tags lots_tags notes_tags organize_tags pathways_tags photos_tags %}
+{% load communityplanareas_tags councildistricts_tags files_tags flatblock_tags i18n inplace_tags lots_tags notes_tags organize_tags pathways_tags photos_tags %}
 
 {% block title %}
     {{ lot.display_name|title|default:"unknown" }} |
@@ -251,6 +251,22 @@
                         {% trans "Use code" %}:
                         {{ lot.parcel.local_roll.use_cde }}
                     </li>
+
+                    {% get_council_district lot.centroid.y lot.centroid.x as council_district %}
+                    {% if council_district %}
+                        <li>
+                            {% trans "Council District" %}
+                            {{ council_district }}
+                        </li>
+                    {% endif %}
+
+                    {% get_community_plan_area lot.centroid.y lot.centroid.x as community_plan_area %}
+                    {% if community_plan_area %}
+                        <li>
+                            {% trans "Community Plan Area" %}:
+                            {{ community_plan_area }}
+                        </li>
+                    {% endif %}
 
                     {% if lot.zoning_district %}
                         <li>
