--- a/livinglotsla/templates/inplace/lots/lot_detail.html
+++ b/livinglotsla/templates/inplace/lots/lot_detail.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load communityplanareas_tags councildistricts_tags files_tags flatblock_tags i18n inplace_tags lots_tags notes_tags organize_tags pathways_tags photos_tags %}
+{% load communityplanareas_tags councildistricts_tags files_tags flatblock_tags i18n neighborhoodcouncils_tags inplace_tags lots_tags notes_tags organize_tags pathways_tags photos_tags %}
 
 {% block title %}
     {{ lot.display_name|title|default:"unknown" }} |
@@ -257,6 +257,16 @@
                         <li>
                             {% trans "Council District" %}
                             {{ council_district }}
+                        </li>
+                    {% endif %}
+
+                    {% get_neighborhood_council lot.centroid.y lot.centroid.x True as neighborhood_councils %}
+                    {% if neighborhood_councils %}
+                        <li>
+                            {% trans "Neighborhood Council" %}:
+                            {% for council in neighborhood_councils %}
+                                {{ council }}
+                            {% endfor %}
                         </li>
                     {% endif %}
 
