--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -60,6 +60,12 @@ header .row {
     &-menu {
         border-bottom: @frame-border;
         border-top: @frame-border;
+
+        & > div {
+            @media (max-width: @screen-xs-max) {
+                padding: 0;
+            }
+        }
     }
 
     &-search {
@@ -99,9 +105,20 @@ header .row {
     text-transform: uppercase;
 }
 
-.navbar-collapse {
-    padding-left: 0;
-    padding-right: 0;
+.navbar-brand {
+    float: none;
+    height: 75px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    width: 103px;
+}
+
+.navbar-toggle {
+    margin-top: 15px;
+    padding: 15px 10px;
 }
 
 
