--- a/livinglotsla/static/css/bootstrap.less
+++ b/livinglotsla/static/css/bootstrap.less
@@ -16,6 +16,7 @@
 @import "../bower_components/bootstrap/less/buttons.less";
 
 // Components
+@import "../bower_components/bootstrap/less/component-animations.less";
 @import "../bower_components/bootstrap/less/input-groups.less";
 @import "../bower_components/bootstrap/less/navs.less";
 @import "../bower_components/bootstrap/less/navbar.less";
