--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -245,6 +245,7 @@
     .make-row(0);
     .make-md-column(10);
     .make-md-column-offset(1);
+    .hidden-xs();
     height: 65px;
     position: absolute;
     bottom: 0;
