--- a/livinglotsla/templates/_footer.html
+++ b/livinglotsla/templates/_footer.html
@@ -5,7 +5,7 @@
         <div class="col-md-offset-1 col-md-10">
             <div class="row">
 
-                <div class="footer-social col-md-3">
+                <div class="footer-social">
                     <ul>
                         <li>
                             <a href="https://www.facebook.com/CommunityHealthCouncils" class="social social-fb"></a>
@@ -17,7 +17,7 @@
                     <div class="clearfix"></div>
                 </div>
 
-                <div class="footer-collaborator-links col-md-6">
+                <div class="footer-collaborator-links">
                     {% trans "A project of" %}:
                     <a href="http://www.chc-inc.org/">{% trans "Community Health Councils" %}</a> |
                     <a href="http://596acres.org/">596 Acres</a> |
@@ -25,7 +25,7 @@
                     <a href="http://www.la2050.org/">LA 2050</a>
                 </div>
 
-                <div class="footer-subscribe col-md-3">
+                <div class="footer-subscribe">
                     <form action="http://laopenacres.us7.list-manage2.com/subscribe/post?u=e1b2a93e34ac7e27fc741aaf8&amp;id=645ab10bfb" method="post" target="_blank">
                         <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" data-cip-id="mce-EMAIL" placeholder="{% trans "subscribe" %}">
                         <input style="background: none; float: right; width: 0; height: 0;" type="submit" />
