--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -142,12 +142,19 @@ footer {
     }
 
     &-collaborator-links {
+        .make-sm-column(9);
+        .make-md-column(6);
         color: #aaa;
         font-family: @header-font-family; 
         font-size: 12px;
         text-transform: uppercase;
         line-height: 27px;
         padding-top: 5px;
+
+        @media (max-width: @screen-xs-max) {
+            padding-left: 0;
+            padding-right: 0;
+        }
 
         a {
             color: black;
@@ -158,7 +165,15 @@ footer {
 
     &-subscribe {
         .menu-bookend;
+        .make-md-column(3);
         line-height: 27px;
+
+        @media (max-width: @screen-sm-max) {
+            padding-left: 0;
+            padding-right: 0;
+            border-left: 0;
+            border-right: 0;
+        }
 
         input {
             border: 0;
@@ -168,6 +183,9 @@ footer {
 
     &-social {
         .menu-bookend;
+        .hidden-xs();
+        .make-md-column(3);
+        .make-sm-column(3);
         line-height: 27px;
 
         ul {
