--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -4097,18 +4097,15 @@ form .btn-primary .badge {
   margin-left: 0;
   margin-right: 0;
   position: relative;
+  float: left;
+  width: 83.33333333333334%;
   min-height: 1px;
   padding-left: 15px;
   padding-right: 15px;
+  margin-left: 33.33333333333333%;
   height: 100%;
 }
-@media (min-width: 992px) {
-  .map-filters-wrapper {
-    float: left;
-    width: 83.33333333333334%;
-  }
-}
-@media (min-width: 992px) {
+@media (min-width: 480px) {
   .map-filters-wrapper {
     margin-left: 8.333333333333332%;
   }
@@ -4147,13 +4144,13 @@ form .btn-primary .badge {
   padding-top: 5px;
   z-index: 5000;
 }
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .map-filters#map-filters-parent {
     float: left;
     width: 25%;
   }
 }
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .map-filters#map-filters-parent {
     margin-left: 75%;
   }
