--- a/livinglotsla/static/css/pages/blog.less
+++ b/livinglotsla/static/css/pages/blog.less
@@ -3,6 +3,8 @@
         .make-row();
         .make-md-column(10);
         margin-bottom: 50px;
+        margin-left: 0;
+        margin-right: 0;
     }
 
     h2,
