--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -57,6 +57,11 @@ header .row {
 }
 
 .header {
+    &-row {
+        .make-row();
+        height: 50px;
+    }
+
     &-menu {
         border-bottom: @frame-border;
         border-top: @frame-border;
@@ -74,12 +79,14 @@ header .row {
             width: 100%;
         }
         .menu-bookend;
+        line-height: 40px;
     }
 
     &-tagline {
         .menu-bookend;
         font-size: 12px;
         font-style: italic;
+        line-height: 17px;
     }
 }
 
@@ -99,7 +106,7 @@ header .row {
 .navbar-default .navbar-nav > li > a {
     color: black;
     font-weight: bold;
-    line-height: 28px;
+    line-height: 40px;
     padding: 5px;
     text-decoration: none;
     text-transform: uppercase;
