--- a/livinglotsla/templates/_header.html
+++ b/livinglotsla/templates/_header.html
@@ -15,7 +15,7 @@
 
     <div class="header-menu row">
         <div class="col-sm-offset-1 col-sm-10">
-            <div class="row">
+            <div class="header-row">
                 <div class="col-md-3 hidden-xs hidden-sm header-tagline">
                     {% trans "Transforming vacant spaces into healthy places." %}
                 </div>
