--- a/livinglotsla/templates/_header.html
+++ b/livinglotsla/templates/_header.html
@@ -16,11 +16,11 @@
     <div class="header-menu row">
         <div class="col-sm-offset-1 col-sm-10">
             <div class="header-row">
-                <div class="col-md-3 hidden-xs hidden-sm header-tagline">
+                <div class="header-tagline">
                     {% trans "Transforming vacant spaces into healthy places." %}
                 </div>
 
-                <nav class="col-sm-9 col-md-6 navbar navbar-default hidden-print" role="navigation">
+                <nav class="navbar navbar-default" role="navigation">
 
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-main">
@@ -46,7 +46,7 @@
                     </div>
                 </nav>
 
-                <div class="col-sm-3 col-md-3 hidden-xs header-search">
+                <div class="header-search">
                     <input type="search" placeholder="{% trans "search" %}" />
                 </div>
             </div>
