Only set height if navbar not collapsed

--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -59,7 +59,10 @@ header .row {
 .header {
     &-row {
         .make-row();
-        height: 50px;
+        margin: 0;
+        @media (min-width: @screen-sm-min) {
+            height: 50px;
+        }
     }
 
     &-menu {
