--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -3739,7 +3739,12 @@ header .row {
 .header-row {
   margin-left: -15px;
   margin-right: -15px;
-  height: 50px;
+  margin: 0;
+}
+@media (min-width: 768px) {
+  .header-row {
+    height: 50px;
+  }
 }
 .header-menu {
   border-bottom: 1px solid #aaaaaa;
