--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -3909,6 +3909,7 @@ footer .row {
   color: #aaa;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-size: 12px;
+  text-align: center;
   text-transform: uppercase;
   line-height: 27px;
   padding-top: 5px;
