--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -166,6 +166,7 @@ footer {
         color: #aaa;
         font-family: @header-font-family; 
         font-size: 12px;
+        text-align: center;
         text-transform: uppercase;
         line-height: 27px;
         padding-top: 5px;
