Collaborator links open in new tab

--- a/livinglotsla/templates/_footer.html
+++ b/livinglotsla/templates/_footer.html
@@ -19,10 +19,10 @@
 
                 <div class="footer-collaborator-links">
                     {% trans "A project of" %}:
-                    <a href="http://www.chc-inc.org/">{% trans "Community Health Councils" %}</a> |
-                    <a href="http://596acres.org/">596 Acres</a> |
-                    <a href="http://c-lab.columbia.edu/">C-Lab</a> |
-                    <a href="http://www.la2050.org/">LA 2050</a>
+                    <a href="http://www.chc-inc.org/" target="_blank">{% trans "Community Health Councils" %}</a> |
+                    <a href="http://596acres.org/" target="_blank">596 Acres</a> |
+                    <a href="http://c-lab.columbia.edu/" target="_blank">C-Lab</a> |
+                    <a href="http://www.la2050.org/" target="_blank">LA 2050</a>
                 </div>
 
                 <div class="footer-subscribe">
