--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -3486,6 +3486,8 @@ button.close {
 .modal-footer:after,
 .header-row:before,
 .header-row:after,
+.footer-row:before,
+.footer-row:after,
 .blog-entry-list article:before,
 .blog-entry-list article:after,
 .map-filters-wrapper:before,
@@ -3512,6 +3514,7 @@ button.close {
 .navbar-collapse:after,
 .modal-footer:after,
 .header-row:after,
+.footer-row:after,
 .blog-entry-list article:after,
 .map-filters-wrapper:after,
 .map-filters-inner-wrapper:after,
@@ -3897,6 +3900,12 @@ footer {
 footer .row {
   margin: 0;
 }
+.footer-row {
+  margin-left: -15px;
+  margin-right: -15px;
+  height: 50px;
+  margin: 0;
+}
 .footer-menu {
   border-bottom: 1px solid #aaaaaa;
   border-top: 1px solid #aaaaaa;
@@ -3911,7 +3920,7 @@ footer .row {
   font-size: 12px;
   text-align: center;
   text-transform: uppercase;
-  line-height: 27px;
+  line-height: 40px;
   padding-top: 5px;
 }
 @media (min-width: 768px) {
@@ -3932,6 +3941,11 @@ footer .row {
     padding-right: 0;
   }
 }
+@media (min-width: 992px) and (max-width: 1199px) {
+  .footer-collaborator-links {
+    line-height: 20px;
+  }
+}
 .footer-collaborator-links a {
   color: black;
   text-decoration: none;
@@ -3948,7 +3962,7 @@ footer .row {
   min-height: 1px;
   padding-left: 15px;
   padding-right: 15px;
-  line-height: 27px;
+  line-height: 40px;
 }
 @media (min-width: 992px) {
   .footer-subscribe {
@@ -3979,7 +3993,7 @@ footer .row {
   min-height: 1px;
   padding-left: 15px;
   padding-right: 15px;
-  line-height: 27px;
+  line-height: 50px;
 }
 @media (max-width: 767px) {
   .footer-social,
