--- a/livinglotsla/templates/_footer.html
+++ b/livinglotsla/templates/_footer.html
@@ -3,7 +3,7 @@
 <footer>
     <div class="footer-menu row">
         <div class="col-md-offset-1 col-md-10">
-            <div class="row">
+            <div class="footer-row">
 
                 <div class="footer-social">
                     <ul>
