--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -4203,15 +4203,19 @@ form .btn-primary .badge {
   margin-left: 0;
   margin-right: 0;
   position: relative;
-  float: left;
-  width: 83.33333333333334%;
   min-height: 1px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: 33.33333333333333%;
   height: 100%;
 }
-@media (min-width: 480px) {
+@media (min-width: 768px) {
+  .map-filters-wrapper {
+    float: left;
+    width: 83.33333333333334%;
+  }
+}
+@media (min-width: 768px) {
   .map-filters-wrapper {
     margin-left: 8.333333333333332%;
   }
