--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -16,9 +16,9 @@
 
 .map-filters-wrapper {
     .make-row(0);
-    .make-xs-column(10);
+    .make-sm-column(10);
     margin-left: percentage((4 / @grid-columns));
-    .make-xs-column-offset(1);
+    .make-sm-column-offset(1);
     height: 100%;
 }
 
